--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+server.port=8080
+
+jwt.secret=weiweidemo
+jwt.expiration=3600000
+
+
+openapi.server.url= http://localhost:${server.port}
+openapi.server.description= Local server
